Descriptive stats now up

--- a/tables_and_plots.ipynb
+++ b/tables_and_plots.ipynb
@@ -121,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -326,6 +326,357 @@
     "short_tab.round(3).to_stata('results/results_BC_educ.dta')\n",
     "# short_tab.round(3).to_csv('results/results_BC_educ.csv')\n",
     "# short_tab"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Descriptive stats"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 117,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "table_raw = np.zeros((5,11,6))\n",
+    "var_names = []\n",
+    "row_n = 0\n",
+    "table_n = 0\n",
+    "column_names = []\n",
+    "results_follow = 0\n",
+    "names_done = 0\n",
+    "f = open('results/descriptive_stats_part2.log','r')\n",
+    "for line in f:\n",
+    "    words = line.split()\n",
+    "    if len(words)>1 and words[0] == \"Variable\":\n",
+    "        results_follow=1\n",
+    "        if names_done == 0:\n",
+    "            stats_names = words[2:]       \n",
+    "    elif len(words)>1 and results_follow==1:\n",
+    "        if words[0]!='before92':\n",
+    "            if names_done ==0:\n",
+    "                column_names.append(words[0])\n",
+    "            idx = 0\n",
+    "            for w in words[2:]: \n",
+    "                w = w.replace(\",\",\"\")\n",
+    "                table_raw[idx,row_n,table_n] = np.array(w)\n",
+    "                idx+=1\n",
+    "            row_n += 1\n",
+    "\n",
+    "        elif words[0]=='before92':\n",
+    "            if names_done ==0:\n",
+    "                column_names.append(words[0])\n",
+    "                names_done = 1 \n",
+    "            idx=0\n",
+    "            for w in words[2:]: \n",
+    "                w = w.replace(\",\",\"\")\n",
+    "                table_raw[idx,row_n,table_n] = np.array(w)\n",
+    "                idx+=1\n",
+    "            results_follow=0\n",
+    "            table_n +=1\n",
+    "            row_n = 0\n",
+    "f.close()\n",
+    "\n",
+    "column_names_format =  ['duration','duration_last','age','female','college',\n",
+    "              'year_of_spell','last_T','last_P','last_A','before_84','before_92']\n",
+    "table_names_format = ['Raw_and_LTU', 'STU_noAjd', 'STU','STU_Recalls', 'NE_noAjd', 'NE']\n",
+    "# names_latex = format_names(names)\n",
+    "# # names_latex = format_names(names)\n",
+    "# names_latex = names\n",
+    "# AllTab = pd.DataFrame(table_raw[1:,:].T, index=names_latex, columns=column_names)\n",
+    "# short_tab = format_very_short(AllTab)\n",
+    "# # AllTab.round(3).to_csv('results/all_results.csv')\n",
+    "# short_tab.round(3).to_stata('results/all_results.dta')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 133,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>version</th>\n",
+       "      <th>stat</th>\n",
+       "      <th>duration</th>\n",
+       "      <th>duration_last</th>\n",
+       "      <th>age</th>\n",
+       "      <th>female</th>\n",
+       "      <th>college</th>\n",
+       "      <th>year_of_spell</th>\n",
+       "      <th>last_T</th>\n",
+       "      <th>last_P</th>\n",
+       "      <th>last_A</th>\n",
+       "      <th>before_84</th>\n",
+       "      <th>before_92</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Raw_and_LTU</td>\n",
+       "      <td>mean</td>\n",
+       "      <td>353.9770</td>\n",
+       "      <td>453.7352</td>\n",
+       "      <td>32.308290</td>\n",
+       "      <td>0.586265</td>\n",
+       "      <td>0.108958</td>\n",
+       "      <td>1998.404000</td>\n",
+       "      <td>0.682072</td>\n",
+       "      <td>0.311945</td>\n",
+       "      <td>0.005592</td>\n",
+       "      <td>0.112318</td>\n",
+       "      <td>0.269028</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Raw_and_LTU</td>\n",
+       "      <td>std</td>\n",
+       "      <td>606.7065</td>\n",
+       "      <td>828.4570</td>\n",
+       "      <td>6.482547</td>\n",
+       "      <td>0.492503</td>\n",
+       "      <td>0.311587</td>\n",
+       "      <td>9.967148</td>\n",
+       "      <td>0.465672</td>\n",
+       "      <td>0.463288</td>\n",
+       "      <td>0.074567</td>\n",
+       "      <td>0.315758</td>\n",
+       "      <td>0.443455</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>STU_noAjd</td>\n",
+       "      <td>mean</td>\n",
+       "      <td>385.3261</td>\n",
+       "      <td>491.9146</td>\n",
+       "      <td>32.141490</td>\n",
+       "      <td>0.582275</td>\n",
+       "      <td>0.132391</td>\n",
+       "      <td>1997.909000</td>\n",
+       "      <td>0.635894</td>\n",
+       "      <td>0.319823</td>\n",
+       "      <td>0.042774</td>\n",
+       "      <td>0.132492</td>\n",
+       "      <td>0.273647</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>STU_noAjd</td>\n",
+       "      <td>std</td>\n",
+       "      <td>738.7016</td>\n",
+       "      <td>905.7662</td>\n",
+       "      <td>6.594687</td>\n",
+       "      <td>0.493185</td>\n",
+       "      <td>0.338916</td>\n",
+       "      <td>10.863580</td>\n",
+       "      <td>0.481179</td>\n",
+       "      <td>0.466408</td>\n",
+       "      <td>0.202348</td>\n",
+       "      <td>0.339025</td>\n",
+       "      <td>0.445830</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>STU</td>\n",
+       "      <td>mean</td>\n",
+       "      <td>352.7501</td>\n",
+       "      <td>477.4336</td>\n",
+       "      <td>30.705510</td>\n",
+       "      <td>0.582275</td>\n",
+       "      <td>0.132391</td>\n",
+       "      <td>1996.473000</td>\n",
+       "      <td>0.632773</td>\n",
+       "      <td>0.306778</td>\n",
+       "      <td>0.059663</td>\n",
+       "      <td>0.150925</td>\n",
+       "      <td>0.305461</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>STU</td>\n",
+       "      <td>std</td>\n",
+       "      <td>736.2533</td>\n",
+       "      <td>906.7592</td>\n",
+       "      <td>6.094080</td>\n",
+       "      <td>0.493185</td>\n",
+       "      <td>0.338916</td>\n",
+       "      <td>10.967480</td>\n",
+       "      <td>0.482049</td>\n",
+       "      <td>0.461157</td>\n",
+       "      <td>0.236861</td>\n",
+       "      <td>0.357976</td>\n",
+       "      <td>0.460603</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>STU_Recalls</td>\n",
+       "      <td>mean</td>\n",
+       "      <td>289.6782</td>\n",
+       "      <td>497.6277</td>\n",
+       "      <td>30.354550</td>\n",
+       "      <td>0.573005</td>\n",
+       "      <td>0.140634</td>\n",
+       "      <td>1995.799000</td>\n",
+       "      <td>0.411299</td>\n",
+       "      <td>0.536941</td>\n",
+       "      <td>0.048297</td>\n",
+       "      <td>0.165690</td>\n",
+       "      <td>0.327687</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>STU_Recalls</td>\n",
+       "      <td>std</td>\n",
+       "      <td>682.6032</td>\n",
+       "      <td>964.2259</td>\n",
+       "      <td>6.093122</td>\n",
+       "      <td>0.494642</td>\n",
+       "      <td>0.347644</td>\n",
+       "      <td>11.087450</td>\n",
+       "      <td>0.492069</td>\n",
+       "      <td>0.498634</td>\n",
+       "      <td>0.214393</td>\n",
+       "      <td>0.371802</td>\n",
+       "      <td>0.469370</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>NE_noAjd</td>\n",
+       "      <td>mean</td>\n",
+       "      <td>353.1223</td>\n",
+       "      <td>539.2480</td>\n",
+       "      <td>31.972520</td>\n",
+       "      <td>0.573282</td>\n",
+       "      <td>0.141452</td>\n",
+       "      <td>1997.265000</td>\n",
+       "      <td>0.423268</td>\n",
+       "      <td>0.537649</td>\n",
+       "      <td>0.034178</td>\n",
+       "      <td>0.149958</td>\n",
+       "      <td>0.293736</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>NE_noAjd</td>\n",
+       "      <td>std</td>\n",
+       "      <td>730.9730</td>\n",
+       "      <td>995.5933</td>\n",
+       "      <td>6.692815</td>\n",
+       "      <td>0.494601</td>\n",
+       "      <td>0.348487</td>\n",
+       "      <td>11.238430</td>\n",
+       "      <td>0.494077</td>\n",
+       "      <td>0.498581</td>\n",
+       "      <td>0.181687</td>\n",
+       "      <td>0.357030</td>\n",
+       "      <td>0.455473</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>NE</td>\n",
+       "      <td>mean</td>\n",
+       "      <td>295.4518</td>\n",
+       "      <td>517.6939</td>\n",
+       "      <td>30.185050</td>\n",
+       "      <td>0.573282</td>\n",
+       "      <td>0.141452</td>\n",
+       "      <td>1995.478000</td>\n",
+       "      <td>0.404219</td>\n",
+       "      <td>0.546139</td>\n",
+       "      <td>0.045808</td>\n",
+       "      <td>0.175789</td>\n",
+       "      <td>0.338540</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>NE</td>\n",
+       "      <td>std</td>\n",
+       "      <td>706.7723</td>\n",
+       "      <td>990.9679</td>\n",
+       "      <td>6.061382</td>\n",
+       "      <td>0.494601</td>\n",
+       "      <td>0.348487</td>\n",
+       "      <td>11.255460</td>\n",
+       "      <td>0.490741</td>\n",
+       "      <td>0.497867</td>\n",
+       "      <td>0.209068</td>\n",
+       "      <td>0.380640</td>\n",
+       "      <td>0.473213</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       version  stat  duration  duration_last        age    female   college  \\\n",
+       "0  Raw_and_LTU  mean  353.9770       453.7352  32.308290  0.586265  0.108958   \n",
+       "0  Raw_and_LTU   std  606.7065       828.4570   6.482547  0.492503  0.311587   \n",
+       "1    STU_noAjd  mean  385.3261       491.9146  32.141490  0.582275  0.132391   \n",
+       "1    STU_noAjd   std  738.7016       905.7662   6.594687  0.493185  0.338916   \n",
+       "2          STU  mean  352.7501       477.4336  30.705510  0.582275  0.132391   \n",
+       "2          STU   std  736.2533       906.7592   6.094080  0.493185  0.338916   \n",
+       "3  STU_Recalls  mean  289.6782       497.6277  30.354550  0.573005  0.140634   \n",
+       "3  STU_Recalls   std  682.6032       964.2259   6.093122  0.494642  0.347644   \n",
+       "4     NE_noAjd  mean  353.1223       539.2480  31.972520  0.573282  0.141452   \n",
+       "4     NE_noAjd   std  730.9730       995.5933   6.692815  0.494601  0.348487   \n",
+       "5           NE  mean  295.4518       517.6939  30.185050  0.573282  0.141452   \n",
+       "5           NE   std  706.7723       990.9679   6.061382  0.494601  0.348487   \n",
+       "\n",
+       "   year_of_spell    last_T    last_P    last_A  before_84  before_92  \n",
+       "0    1998.404000  0.682072  0.311945  0.005592   0.112318   0.269028  \n",
+       "0       9.967148  0.465672  0.463288  0.074567   0.315758   0.443455  \n",
+       "1    1997.909000  0.635894  0.319823  0.042774   0.132492   0.273647  \n",
+       "1      10.863580  0.481179  0.466408  0.202348   0.339025   0.445830  \n",
+       "2    1996.473000  0.632773  0.306778  0.059663   0.150925   0.305461  \n",
+       "2      10.967480  0.482049  0.461157  0.236861   0.357976   0.460603  \n",
+       "3    1995.799000  0.411299  0.536941  0.048297   0.165690   0.327687  \n",
+       "3      11.087450  0.492069  0.498634  0.214393   0.371802   0.469370  \n",
+       "4    1997.265000  0.423268  0.537649  0.034178   0.149958   0.293736  \n",
+       "4      11.238430  0.494077  0.498581  0.181687   0.357030   0.455473  \n",
+       "5    1995.478000  0.404219  0.546139  0.045808   0.175789   0.338540  \n",
+       "5      11.255460  0.490741  0.497867  0.209068   0.380640   0.473213  "
+      ]
+     },
+     "execution_count": 133,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "means_table = pd.DataFrame(table_raw[1,:,:].T, columns=column_names_format) #, index=names_latex\n",
+    "means_table['version'] = table_names_format\n",
+    "# means_table.round(3).to_stata('results/descriptive_stats_means.dta')\n",
+    "stds_table = pd.DataFrame(table_raw[2,:,:].T, columns=column_names_format) #, index=names_latex\n",
+    "stds_table['version'] = table_names_format\n",
+    "\n",
+    "final_table = pd.concat([means_table, stds_table]).sort_index(kind='merge')\n",
+    "final_table['stat'] = ['mean','std']*6\n",
+    "final_table = final_table[list(final_table.columns[-2:])+list(final_table.columns[:-2])]\n",
+    "final_table.to_stata('results/descriptive_stats.dta')\n",
+    "final_table"
    ]
   },
   {
