--- a/tables_and_plots.ipynb
+++ b/tables_and_plots.ipynb
@@ -121,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1046,7 +1046,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1091,7 +1091,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1179,7 +1179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {
     "scrolled": false
    },
@@ -1221,6 +1221,13 @@
     "short_tab_noA['N'] = np.array(noobs)\n",
     "# AllTab.round(3).to_csv('results/all_results.csv')\n",
     "short_tab_noA.round(3).to_stata('results/all_results_noA.dta')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Business cycles"
    ]
   },
   {
@@ -1266,7 +1273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1276,7 +1283,7 @@
     "column_names = []\n",
     "results_follow = 0\n",
     "first_row = 1\n",
-    "f = open('results/all_results_sex.log','r')\n",
+    "f = open('results/BC_all_noA.log','r')\n",
     "for line in f:\n",
     "    words = line.split()\n",
     "    if len(words)>1 and words[1]==\"******\":\n",
@@ -1298,57 +1305,16 @@
     "\n",
     "# names_latex = format_names(names)\n",
     "names_latex = names\n",
-    "var_names, sex_names = format_column_names(column_names)\n",
+    "var_names, year_names = format_column_names(column_names)\n",
     "AllTab = pd.DataFrame(table_raw[1:,:].T, index=names_latex, columns=var_names)\n",
     "short_tab = format_very_short(AllTab)\n",
-    "short_tab['gender'] = list(itertools.chain.from_iterable(sex_names))\n",
-    "short_tab.round(3).to_stata('results/results_sex.dta')"
+    "short_tab['period'] = list(itertools.chain.from_iterable(year_names))\n",
+    "short_tab.round(3).to_stata('results/BC_noA_results.dta')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "table_raw = np.empty(23)\n",
-    "names = []\n",
-    "sigmas = []\n",
-    "column_names = []\n",
-    "results_follow = 0\n",
-    "first_row = 1\n",
-    "f = open('results/all_results_educ.log','r')\n",
-    "for line in f:\n",
-    "    words = line.split()\n",
-    "    if len(words)>1 and words[1]==\"******\":\n",
-    "        column_names.append(\"\".join(words[2:-1]))\n",
-    "        results_follow=1\n",
-    "    elif results_follow==1 and len(words)==7:\n",
-    "        if first_row==1:\n",
-    "            names.append(words[0])\n",
-    "        sigmas.append(float(words[3]))\n",
-    "        if words[0]=='lpsig_b':\n",
-    "            results_follow=0\n",
-    "            table_raw = np.vstack((table_raw,np.array(sigmas)))\n",
-    "            sigmas = []\n",
-    "            first_row = 0\n",
-    "#             print(column_names[-1])\n",
-    "#             names_latex = format_names(names)\n",
-    "#             pd.DataFrame(sigmas, index=names_latex, columns=['Raw'])\n",
-    "f.close()\n",
-    "\n",
-    "# names_latex = format_names(names)\n",
-    "names_latex = names\n",
-    "var_names, educ_names = format_column_names(column_names)\n",
-    "AllTab = pd.DataFrame(table_raw[1:,:].T, index=names_latex, columns=var_names)\n",
-    "short_tab = format_very_short(AllTab)\n",
-    "short_tab['educ'] = list(itertools.chain.from_iterable(educ_names))\n",
-    "short_tab.round(3).to_stata('results/results_educ.dta')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1389,6 +1355,304 @@
     "short_tab.round(3).to_stata('results/results_BC_educ.dta')\n",
     "# short_tab.round(3).to_csv('results/results_BC_educ.csv')\n",
     "# short_tab"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "table_raw = np.empty(23)\n",
+    "names = []\n",
+    "sigmas = []\n",
+    "column_names = []\n",
+    "results_follow = 0\n",
+    "first_row = 1\n",
+    "f = open('results/BC_educ_noA.log','r')\n",
+    "for line in f:\n",
+    "    words = line.split()\n",
+    "    if len(words)>1 and words[1]==\"******\":\n",
+    "        column_names.append(\"\".join(words[2:-1]))\n",
+    "        results_follow=1\n",
+    "    elif results_follow==1 and len(words)==7:\n",
+    "        if first_row==1:\n",
+    "            names.append(words[0])\n",
+    "        sigmas.append(float(words[3]))\n",
+    "        if words[0]=='lpsig_b':\n",
+    "            results_follow=0\n",
+    "            table_raw = np.vstack((table_raw,np.array(sigmas)))\n",
+    "            sigmas = []\n",
+    "            first_row = 0\n",
+    "#             print(column_names[-1])\n",
+    "#             names_latex = format_names(names)\n",
+    "#             pd.DataFrame(sigmas, index=names_latex, columns=['Raw'])\n",
+    "f.close()\n",
+    "\n",
+    "# names_latex = format_names(names)\n",
+    "names_latex = names\n",
+    "var_names, educ_names = format_column_names(column_names)\n",
+    "data_names = np.array(educ_names)\n",
+    "AllTab = pd.DataFrame(table_raw[1:,:].T, index=names_latex, columns=var_names)\n",
+    "short_tab = format_very_short(AllTab)\n",
+    "short_tab['educ'] = data_names[:,1]\n",
+    "short_tab['period'] = data_names[:,0]\n",
+    "short_tab.round(3).to_stata('results/results_BC_educ_noA.dta')\n",
+    "# short_tab.round(3).to_csv('results/results_BC_educ.csv')\n",
+    "# short_tab"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Characteristics breakdown"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "table_raw = np.empty(23)\n",
+    "names = []\n",
+    "sigmas = []\n",
+    "column_names = []\n",
+    "results_follow = 0\n",
+    "first_row = 1\n",
+    "f = open('results/all_results_sex.log','r')\n",
+    "for line in f:\n",
+    "    words = line.split()\n",
+    "    if len(words)>1 and words[1]==\"******\":\n",
+    "        column_names.append(\"\".join(words[2:-1]))\n",
+    "        results_follow=1\n",
+    "    elif results_follow==1 and len(words)==7:\n",
+    "        if first_row==1:\n",
+    "            names.append(words[0])\n",
+    "        sigmas.append(float(words[3]))\n",
+    "        if words[0]=='lpsig_b':\n",
+    "            results_follow=0\n",
+    "            table_raw = np.vstack((table_raw,np.array(sigmas)))\n",
+    "            sigmas = []\n",
+    "            first_row = 0\n",
+    "#             print(column_names[-1])\n",
+    "#             names_latex = format_names(names)\n",
+    "#             pd.DataFrame(sigmas, index=names_latex, columns=['Raw'])\n",
+    "f.close()\n",
+    "\n",
+    "# names_latex = format_names(names)\n",
+    "names_latex = names\n",
+    "var_names, sex_names = format_column_names(column_names)\n",
+    "AllTab = pd.DataFrame(table_raw[1:,:].T, index=names_latex, columns=var_names)\n",
+    "short_tab = format_very_short(AllTab)\n",
+    "short_tab['gender'] = list(itertools.chain.from_iterable(sex_names))\n",
+    "short_tab.round(3).to_stata('results/results_sex.dta')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "table_raw = np.empty(23)\n",
+    "names = []\n",
+    "sigmas = []\n",
+    "column_names = []\n",
+    "results_follow = 0\n",
+    "first_row = 1\n",
+    "f = open('results/all_results_sex_96.log','r')\n",
+    "for line in f:\n",
+    "    words = line.split()\n",
+    "    if len(words)>1 and words[1]==\"******\":\n",
+    "        column_names.append(\"\".join(words[2:-1]))\n",
+    "        results_follow=1\n",
+    "    elif results_follow==1 and len(words)==7:\n",
+    "        if first_row==1:\n",
+    "            names.append(words[0])\n",
+    "        sigmas.append(float(words[3]))\n",
+    "        if words[0]=='lpsig_b':\n",
+    "            results_follow=0\n",
+    "            table_raw = np.vstack((table_raw,np.array(sigmas)))\n",
+    "            sigmas = []\n",
+    "            first_row = 0\n",
+    "#             print(column_names[-1])\n",
+    "#             names_latex = format_names(names)\n",
+    "#             pd.DataFrame(sigmas, index=names_latex, columns=['Raw'])\n",
+    "f.close()\n",
+    "\n",
+    "# names_latex = format_names(names)\n",
+    "names_latex = names\n",
+    "var_names, sex_names = format_column_names(column_names)\n",
+    "AllTab = pd.DataFrame(table_raw[1:,:].T, index=names_latex, columns=var_names)\n",
+    "short_tab = format_very_short(AllTab)\n",
+    "short_tab['gender'] = list(itertools.chain.from_iterable(sex_names))\n",
+    "short_tab.round(3).to_stata('results/results_sex_96.dta')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "table_raw = np.empty(23)\n",
+    "names = []\n",
+    "sigmas = []\n",
+    "column_names = []\n",
+    "results_follow = 0\n",
+    "first_row = 1\n",
+    "f = open('results/all_results_sex_noA.log','r')\n",
+    "for line in f:\n",
+    "    words = line.split()\n",
+    "    if len(words)>1 and words[1]==\"******\":\n",
+    "        column_names.append(\"\".join(words[2:-1]))\n",
+    "        results_follow=1\n",
+    "    elif results_follow==1 and len(words)==7:\n",
+    "        if first_row==1:\n",
+    "            names.append(words[0])\n",
+    "        sigmas.append(float(words[3]))\n",
+    "        if words[0]=='lpsig_b':\n",
+    "            results_follow=0\n",
+    "            table_raw = np.vstack((table_raw,np.array(sigmas)))\n",
+    "            sigmas = []\n",
+    "            first_row = 0\n",
+    "#             print(column_names[-1])\n",
+    "#             names_latex = format_names(names)\n",
+    "#             pd.DataFrame(sigmas, index=names_latex, columns=['Raw'])\n",
+    "f.close()\n",
+    "\n",
+    "# names_latex = format_names(names)\n",
+    "names_latex = names\n",
+    "var_names, sex_names = format_column_names(column_names)\n",
+    "AllTab = pd.DataFrame(table_raw[1:,:].T, index=names_latex, columns=var_names)\n",
+    "short_tab = format_very_short(AllTab)\n",
+    "short_tab['gender'] = list(itertools.chain.from_iterable(sex_names))\n",
+    "short_tab.round(3).to_stata('results/results_sex_noA.dta')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "table_raw = np.empty(23)\n",
+    "names = []\n",
+    "sigmas = []\n",
+    "column_names = []\n",
+    "results_follow = 0\n",
+    "first_row = 1\n",
+    "f = open('results/all_results_sex_96_noA.log','r')\n",
+    "for line in f:\n",
+    "    words = line.split()\n",
+    "    if len(words)>1 and words[1]==\"******\":\n",
+    "        column_names.append(\"\".join(words[2:-1]))\n",
+    "        results_follow=1\n",
+    "    elif results_follow==1 and len(words)==7:\n",
+    "        if first_row==1:\n",
+    "            names.append(words[0])\n",
+    "        sigmas.append(float(words[3]))\n",
+    "        if words[0]=='lpsig_b':\n",
+    "            results_follow=0\n",
+    "            table_raw = np.vstack((table_raw,np.array(sigmas)))\n",
+    "            sigmas = []\n",
+    "            first_row = 0\n",
+    "#             print(column_names[-1])\n",
+    "#             names_latex = format_names(names)\n",
+    "#             pd.DataFrame(sigmas, index=names_latex, columns=['Raw'])\n",
+    "f.close()\n",
+    "\n",
+    "# names_latex = format_names(names)\n",
+    "names_latex = names\n",
+    "var_names, sex_names = format_column_names(column_names)\n",
+    "AllTab = pd.DataFrame(table_raw[1:,:].T, index=names_latex, columns=var_names)\n",
+    "short_tab = format_very_short(AllTab)\n",
+    "short_tab['gender'] = list(itertools.chain.from_iterable(sex_names))\n",
+    "short_tab.round(3).to_stata('results/results_sex_96_noA.dta')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "table_raw = np.empty(23)\n",
+    "names = []\n",
+    "sigmas = []\n",
+    "column_names = []\n",
+    "results_follow = 0\n",
+    "first_row = 1\n",
+    "f = open('results/all_results_educ.log','r')\n",
+    "for line in f:\n",
+    "    words = line.split()\n",
+    "    if len(words)>1 and words[1]==\"******\":\n",
+    "        column_names.append(\"\".join(words[2:-1]))\n",
+    "        results_follow=1\n",
+    "    elif results_follow==1 and len(words)==7:\n",
+    "        if first_row==1:\n",
+    "            names.append(words[0])\n",
+    "        sigmas.append(float(words[3]))\n",
+    "        if words[0]=='lpsig_b':\n",
+    "            results_follow=0\n",
+    "            table_raw = np.vstack((table_raw,np.array(sigmas)))\n",
+    "            sigmas = []\n",
+    "            first_row = 0\n",
+    "#             print(column_names[-1])\n",
+    "#             names_latex = format_names(names)\n",
+    "#             pd.DataFrame(sigmas, index=names_latex, columns=['Raw'])\n",
+    "f.close()\n",
+    "\n",
+    "# names_latex = format_names(names)\n",
+    "names_latex = names\n",
+    "var_names, educ_names = format_column_names(column_names)\n",
+    "AllTab = pd.DataFrame(table_raw[1:,:].T, index=names_latex, columns=var_names)\n",
+    "short_tab = format_very_short(AllTab)\n",
+    "short_tab['educ'] = list(itertools.chain.from_iterable(educ_names))\n",
+    "short_tab.round(3).to_stata('results/results_educ.dta')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "table_raw = np.empty(23)\n",
+    "names = []\n",
+    "sigmas = []\n",
+    "column_names = []\n",
+    "results_follow = 0\n",
+    "first_row = 1\n",
+    "f = open('results/all_results_educ_96_noA.log','r')\n",
+    "for line in f:\n",
+    "    words = line.split()\n",
+    "    if len(words)>1 and words[1]==\"******\":\n",
+    "        column_names.append(\"\".join(words[2:-1]))\n",
+    "        results_follow=1\n",
+    "    elif results_follow==1 and len(words)==7:\n",
+    "        if first_row==1:\n",
+    "            names.append(words[0])\n",
+    "        sigmas.append(float(words[3]))\n",
+    "        if words[0]=='lpsig_b':\n",
+    "            results_follow=0\n",
+    "            table_raw = np.vstack((table_raw,np.array(sigmas)))\n",
+    "            sigmas = []\n",
+    "            first_row = 0\n",
+    "#             print(column_names[-1])\n",
+    "#             names_latex = format_names(names)\n",
+    "#             pd.DataFrame(sigmas, index=names_latex, columns=['Raw'])\n",
+    "f.close()\n",
+    "\n",
+    "# names_latex = format_names(names)\n",
+    "names_latex = names\n",
+    "var_names, educ_names = format_column_names(column_names)\n",
+    "AllTab = pd.DataFrame(table_raw[1:,:].T, index=names_latex, columns=var_names)\n",
+    "short_tab = format_very_short(AllTab)\n",
+    "short_tab['educ'] = list(itertools.chain.from_iterable(educ_names))\n",
+    "short_tab.round(3).to_stata('results/results_educ_96_noA.dta')"
    ]
   },
   {
@@ -1639,7 +1903,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -1807,7 +2071,7 @@
        "6  0.644419  0.308775  0.044430   0.000673   0.006565           NE  "
       ]
      },
-     "execution_count": 61,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
