--- a/tables_and_plots.ipynb
+++ b/tables_and_plots.ipynb
@@ -257,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -294,133 +294,96 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>1.278119</td>\n",
-       "      <td>-0.492407</td>\n",
-       "      <td>0.203289</td>\n",
-       "      <td>0.011000</td>\n",
+       "      <td>1.290154</td>\n",
+       "      <td>-0.507585</td>\n",
+       "      <td>0.206385</td>\n",
+       "      <td>0.011046</td>\n",
        "      <td>Raw</td>\n",
-       "      <td>1.286996</td>\n",
-       "      <td>192.5816</td>\n",
-       "      <td>420104</td>\n",
+       "      <td>1.274990</td>\n",
+       "      <td>190.75820</td>\n",
+       "      <td>430272</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>1.114078</td>\n",
-       "      <td>-0.354731</td>\n",
-       "      <td>0.234215</td>\n",
-       "      <td>0.006438</td>\n",
+       "      <td>1.123429</td>\n",
+       "      <td>-0.367165</td>\n",
+       "      <td>0.237267</td>\n",
+       "      <td>0.006469</td>\n",
        "      <td>LTU</td>\n",
-       "      <td>1.476498</td>\n",
-       "      <td>247.3988</td>\n",
-       "      <td>420104</td>\n",
+       "      <td>1.464209</td>\n",
+       "      <td>245.11060</td>\n",
+       "      <td>430272</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>0.716050</td>\n",
-       "      <td>0.098722</td>\n",
-       "      <td>0.184460</td>\n",
-       "      <td>0.000768</td>\n",
-       "      <td>STU</td>\n",
-       "      <td>2.297234</td>\n",
-       "      <td>249.6314</td>\n",
-       "      <td>648704</td>\n",
+       "      <td>0.574935</td>\n",
+       "      <td>0.237980</td>\n",
+       "      <td>0.181656</td>\n",
+       "      <td>0.005429</td>\n",
+       "      <td>STU+SpellAdj</td>\n",
+       "      <td>2.861077</td>\n",
+       "      <td>224.16070</td>\n",
+       "      <td>689786</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>0.574052</td>\n",
-       "      <td>0.246502</td>\n",
-       "      <td>0.174271</td>\n",
-       "      <td>0.005175</td>\n",
-       "      <td>STU+SpellAdj</td>\n",
-       "      <td>2.865479</td>\n",
-       "      <td>216.3663</td>\n",
-       "      <td>648704</td>\n",
+       "      <td>0.494674</td>\n",
+       "      <td>0.262172</td>\n",
+       "      <td>0.238944</td>\n",
+       "      <td>0.004210</td>\n",
+       "      <td>NE+SpellAdj</td>\n",
+       "      <td>3.325288</td>\n",
+       "      <td>182.17370</td>\n",
+       "      <td>869048</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>0.569520</td>\n",
-       "      <td>0.181201</td>\n",
-       "      <td>0.249761</td>\n",
-       "      <td>-0.000483</td>\n",
-       "      <td>NE(NOSpellAdj)</td>\n",
-       "      <td>2.888282</td>\n",
-       "      <td>230.6004</td>\n",
-       "      <td>844674</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>0.499273</td>\n",
-       "      <td>0.266956</td>\n",
-       "      <td>0.230164</td>\n",
-       "      <td>0.003607</td>\n",
-       "      <td>NE+SpellAdj</td>\n",
-       "      <td>3.294660</td>\n",
-       "      <td>172.9079</td>\n",
-       "      <td>844674</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>0.500506</td>\n",
-       "      <td>0.275227</td>\n",
-       "      <td>0.220459</td>\n",
-       "      <td>0.003809</td>\n",
-       "      <td>STU+Recalls+SpellAdj</td>\n",
-       "      <td>3.286546</td>\n",
-       "      <td>171.7619</td>\n",
-       "      <td>794578</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>0.545228</td>\n",
-       "      <td>0.242018</td>\n",
-       "      <td>0.208360</td>\n",
-       "      <td>0.004394</td>\n",
-       "      <td>STU+Blanks+SpellAdj</td>\n",
-       "      <td>3.016965</td>\n",
-       "      <td>208.5889</td>\n",
-       "      <td>723812</td>\n",
+       "      <td>0.656237</td>\n",
+       "      <td>-0.148000</td>\n",
+       "      <td>0.491514</td>\n",
+       "      <td>0.000248</td>\n",
+       "      <td>Recalls</td>\n",
+       "      <td>2.506614</td>\n",
+       "      <td>54.32779</td>\n",
+       "      <td>132376</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "     shareC   shareDD    shareH    shareS                   cat       var  \\\n",
-       "0  1.278119 -0.492407  0.203289  0.011000                   Raw  1.286996   \n",
-       "1  1.114078 -0.354731  0.234215  0.006438                   LTU  1.476498   \n",
-       "2  0.716050  0.098722  0.184460  0.000768                   STU  2.297234   \n",
-       "3  0.574052  0.246502  0.174271  0.005175          STU+SpellAdj  2.865479   \n",
-       "4  0.569520  0.181201  0.249761 -0.000483        NE(NOSpellAdj)  2.888282   \n",
-       "5  0.499273  0.266956  0.230164  0.003607           NE+SpellAdj  3.294660   \n",
-       "6  0.500506  0.275227  0.220459  0.003809  STU+Recalls+SpellAdj  3.286546   \n",
-       "7  0.545228  0.242018  0.208360  0.004394   STU+Blanks+SpellAdj  3.016965   \n",
+       "     shareC   shareDD    shareH    shareS           cat       var  mean_days  \\\n",
+       "0  1.290154 -0.507585  0.206385  0.011046           Raw  1.274990  190.75820   \n",
+       "1  1.123429 -0.367165  0.237267  0.006469           LTU  1.464209  245.11060   \n",
+       "2  0.574935  0.237980  0.181656  0.005429  STU+SpellAdj  2.861077  224.16070   \n",
+       "3  0.494674  0.262172  0.238944  0.004210   NE+SpellAdj  3.325288  182.17370   \n",
+       "4  0.656237 -0.148000  0.491514  0.000248       Recalls  2.506614   54.32779   \n",
        "\n",
-       "   mean_days       N  \n",
-       "0   192.5816  420104  \n",
-       "1   247.3988  420104  \n",
-       "2   249.6314  648704  \n",
-       "3   216.3663  648704  \n",
-       "4   230.6004  844674  \n",
-       "5   172.9079  844674  \n",
-       "6   171.7619  794578  \n",
-       "7   208.5889  723812  "
+       "        N  \n",
+       "0  430272  \n",
+       "1  430272  \n",
+       "2  689786  \n",
+       "3  869048  \n",
+       "4  132376  "
       ]
      },
-     "execution_count": 45,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "table_raw, names, column_names, noobs = read_results('results/all_results96noA.log')\n",
-    "\n",
+    "table_raw, names, column_names, noobs = read_results('results/all_results96.log')\n",
+    "table_raw_r, names_r, column_names_r, noobs_r = read_results('results/table_recalls.log')\n",
+    "AllTab_r = pd.DataFrame(table_raw_r[1:,:].T, index=names_latex, columns=[\"Recalls\",])\n",
     "names_latex = format_names(names)\n",
     "# names_latex = format_names(names)\n",
     "names_latex = names\n",
     "AllTab = pd.DataFrame(table_raw[1:,:].T, index=names_latex, columns=column_names)\n",
+    "AllTab['Recalls'] = AllTab_r\n",
     "short_tab96_noA= format_very_short(AllTab)\n",
-    "short_tab96_noA['N'] = np.array(noobs)\n",
-    "short_tab96_noA.round(3).to_stata('results/all_results96_noA.dta')\n",
+    "short_tab96_noA['N'] = np.array(np.hstack((noobs,noobs_r)))\n",
+    "short_tab96_noA.round(3).to_stata('results/all_results96.dta')\n",
     "short_tab96_noA"
    ]
   },
