Survival plots y results

--- a/histograms_original.ipynb
+++ b/histograms_original.ipynb
@@ -405,7 +405,7 @@
    "source": [
     "plt.figure(figsize=(28,12))\n",
     "spikes = (4,8,13,17,26,52,78,104)\n",
-    "plt.plot(data_31,  lw=3.5, label='Raw Data',c='grey')\n",
+    "plt.plot(data_31,  lw=3.5, label='RU',c='grey')\n",
     "plt.plot(data_21,lw=3.5, label='LTU Expansion')\n",
     "\n",
     "plt.legend(loc='best', framealpha=1.0, fontsize=32)\n",
