tables, pretty tables

--- a/tables_and_plots.ipynb
+++ b/tables_and_plots.ipynb
@@ -783,6 +783,136 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>shareC</th>\n",
+       "      <th>shareDD</th>\n",
+       "      <th>shareH</th>\n",
+       "      <th>shareS</th>\n",
+       "      <th>cat</th>\n",
+       "      <th>var</th>\n",
+       "      <th>mean_days</th>\n",
+       "      <th>N</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1.285391</td>\n",
+       "      <td>-0.507506</td>\n",
+       "      <td>0.176154</td>\n",
+       "      <td>0.045961</td>\n",
+       "      <td>Raw</td>\n",
+       "      <td>1.279715</td>\n",
+       "      <td>197.0275</td>\n",
+       "      <td>391578</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1.114078</td>\n",
+       "      <td>-0.366743</td>\n",
+       "      <td>0.211144</td>\n",
+       "      <td>0.041520</td>\n",
+       "      <td>LTU</td>\n",
+       "      <td>1.476498</td>\n",
+       "      <td>247.3988</td>\n",
+       "      <td>420104</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>0.716050</td>\n",
+       "      <td>0.073415</td>\n",
+       "      <td>0.153999</td>\n",
+       "      <td>0.056536</td>\n",
+       "      <td>STU</td>\n",
+       "      <td>2.297234</td>\n",
+       "      <td>249.6314</td>\n",
+       "      <td>648704</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>0.574052</td>\n",
+       "      <td>0.224648</td>\n",
+       "      <td>0.141853</td>\n",
+       "      <td>0.059447</td>\n",
+       "      <td>STU+SpellAdj</td>\n",
+       "      <td>2.865479</td>\n",
+       "      <td>216.3663</td>\n",
+       "      <td>648704</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>0.499273</td>\n",
+       "      <td>0.248455</td>\n",
+       "      <td>0.206742</td>\n",
+       "      <td>0.045530</td>\n",
+       "      <td>NE+SpellAdj</td>\n",
+       "      <td>3.294660</td>\n",
+       "      <td>172.9079</td>\n",
+       "      <td>844674</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     shareC   shareDD    shareH    shareS           cat       var  mean_days  \\\n",
+       "0  1.285391 -0.507506  0.176154  0.045961           Raw  1.279715   197.0275   \n",
+       "1  1.114078 -0.366743  0.211144  0.041520           LTU  1.476498   247.3988   \n",
+       "2  0.716050  0.073415  0.153999  0.056536           STU  2.297234   249.6314   \n",
+       "3  0.574052  0.224648  0.141853  0.059447  STU+SpellAdj  2.865479   216.3663   \n",
+       "4  0.499273  0.248455  0.206742  0.045530   NE+SpellAdj  3.294660   172.9079   \n",
+       "\n",
+       "        N  \n",
+       "0  391578  \n",
+       "1  420104  \n",
+       "2  648704  \n",
+       "3  648704  \n",
+       "4  844674  "
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "table_raw, names, column_names, noobs = read_results('results/all_results96_x.log')\n",
+    "\n",
+    "names_latex = format_names(names)\n",
+    "# names_latex = format_names(names)\n",
+    "names_latex = names\n",
+    "AllTab = pd.DataFrame(table_raw[1:,:].T, index=names_latex, columns=column_names)\n",
+    "short_tab96_noA_x= format_very_short(AllTab)\n",
+    "short_tab96_noA_x['N'] = np.array(noobs)\n",
+    "short_tab96_noA_x.round(3).to_stata('results/all_results_96_x.dta')\n",
+    "short_tab96_noA_x"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
    "outputs": [
